# maxwell

./: .gitignore  .gitmodules  .project  LICENSE  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: AS5048A.language.settings.xml  AT24C04C.language.settings.xml  PID_lib.1741981554981.pdom  PID_lib.language.settings.xml  RAD.language.settings.xml  STM32-ADC.1741981555093.pdom  STM32-ADC.language.settings.xml  STM32-CAN.1741981555014.pdom  STM32-CAN.language.settings.xml  STM32-CLS.1741981555051.pdom  STM32-CLS.language.settings.xml  STM32-EEPROM_I2C.1741981554950.pdom  STM32-EEPROM_I2C.language.settings.xml  STM32-NPK_UART.1741981555002.pdom  STM32-NPK_UART.language.settings.xml  STM32-PWM.language.settings.xml  STM32-RAD.1741981554966.pdom  STM32-SPI.1741981555031.pdom  STM32-SPI.language.settings.xml  STM32-SPI_STEP_DIR.1741981555082.pdom  STM32-SPI_STEP_DIR.language.settings.xml  STM32-UART.1741981555060.pdom  STM32-UART.language.settings.xml  TMC_2590.language.settings.xml  bluepill_arm_control.1741981554958.pdom  bluepill_arm_control.language.settings.xml  queue.language.settings.xml  speed_controller.1741981555042.pdom  speed_controller.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
firmware/OBC/teensy/: TSB.h  baseStationTeensy.ino  enums.h  fans.h  flashlight.h  i2c.h  lora.h  lora_isr.h  science.h  servo.h  teensy.ino  viper_topics.h  viper_topics_README.md
firmware/RAD/: .project
firmware/RAD/STM32-RAD/: .cproject  .mxproject  .project  STM32-RAD.ioc  STM32-RAD.launch
firmware/RAD/bluepill_arm_control/: .cproject  .project  bluepill_arm_control.ioc
firmware/RAD/motion-testbench/: motion-test.py  motion-testbench-refined.py  timer-test.py
firmware/RAD/rad_main/: .mxproject  .project  rad_main.ioc
firmware/RAD/release/: .cproject  .project  RAD Debug.launch  RAD.ioc
firmware/RAD/speed_controller/: .cproject  .project  speed_controller.ioc
firmware/ROR/: README.md  ROR-Pi-Pico.ino
firmware/SMRCC/: .project
firmware/SMRCC/elec_validation/: .project
firmware/STM32 Drivers/: .project
firmware/STM32 Drivers/AS5048A/: .cproject  .project  AS5048A.ioc
firmware/STM32 Drivers/AT24C04C/: .cproject  .mxproject  .project  AT24C04C Debug.launch  AT24C04C.ioc
firmware/STM32 Drivers/INA238/: .cproject  .project  INA238.ioc
firmware/STM32 Drivers/MCP_3221/: .cproject  .project  MCP_3221.ioc
firmware/STM32 Drivers/Motion_Profile/: .cproject  .project
firmware/STM32 Drivers/Motion_Profiler/: .cproject  .project  Motion_Profiler.ioc
firmware/STM32 Drivers/NTCB572/: .cproject  .mxproject  .project
firmware/STM32 Drivers/PID_lib/: .cproject  .project  PID_lib.ioc
firmware/STM32 Drivers/TCA9544A/: .cproject  .project  TCA9544A.ioc
firmware/STM32 Drivers/TCA9548A/: .cproject  .project
firmware/STM32 Drivers/TMC_2590/: .cproject  .project  TMC_2590.ioc
firmware/STM32 Drivers/TMP_100/: .cproject  .project  TMP_100.ioc
firmware/STM32 Drivers/TMP_1075/: .cproject  .mxproject  .project  TMP_1075.ioc
firmware/STM32 Drivers/queue/: .cproject  .mxproject  .project  queue Debug.launch  queue.ioc
firmware/VIPER/: .cproject  .project  STM32-VIPER.ioc
firmware/VIPER/release/: .cproject  .mxproject  .project  VIPER.ioc
firmware/jetsonLoRa/: README.md  enableSPIJetsonIO
firmware/jetsonLoRa/device 1/: main.py
firmware/jetsonLoRa/device 2/: main.py
firmware/mech-testing/arm_controller_v1.5/: arm_controller_v1.5.ino
firmware/mech-testing/arm_controller_v2/: arm_controller_v2.ino
firmware/teensy/: TSB.h  fans.h  lora.h  teensy.ino
foxglove/maxwell_overhead_panel/: CHANGELOG.md  README.md  package-lock.json  package.json
foxglove/maxwell_overhead_panel/src/: Overhead2D.tsx  canvas.ts  index.ts  types.ts
ros_ws/: README.md  aruco_detect.py  gstreamer_receive.sh  gstreamer_tramsit.bash  gstreamer_tramsit_cam1.bash  gstreamer_tramsit_cam2.bash  gstreamer_tramsit_d435.bash  gstreamer_tramsit_endoscope.bash  gstreamer_tramsit_infra.bash  start_gstreamer.sh
ros_ws/src/angle_publisher/: README.md  package.xml  servo_controller.launch.py  setup.cfg  setup.py
ros_ws/src/arm/: CMakeLists.txt  README.md  package.xml
ros_ws/src/arm/include/arm/: arm_constants.hpp
ros_ws/src/arm/launch/: keyboard_control_launch.py  servo.launch.py
ros_ws/src/arm/src/: arm_rad_dummy.cpp  joy_controller.cpp  joy_joint_trajectory.cpp  rad_converter.cpp  servo_keyboard_input.cpp
ros_ws/src/arm_controller/: CMakeLists.txt  README.md  arm_controller.xml  package.xml
ros_ws/src/arm_controller/controller/: arm_controller.cpp
ros_ws/src/arm_controller/controller/include/arm_controller/: arm_controller.hpp
ros_ws/src/arm_controller/hardware/: arm_hardware.cpp
ros_ws/src/arm_controller/hardware/include/arm_controller/: arm_hardware.hpp
ros_ws/src/arm_controller/include/arm_controller/: rad_converter.hpp
ros_ws/src/arm_controller/launch/: Testing.cpp  TestingArea.hpp  joint_jog.launch.py  servo.launch.py
ros_ws/src/arm_controller/src/: joy_controller.cpp  keyboard_controller.cpp  rad_converter.cpp
ros_ws/src/arm_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ros_ws/src/arm_moveit_config_sept/: .setup_assistant  CMakeLists.txt  package.xml
ros_ws/src/bringup_py/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/bringup_py/config/: defaults.yaml  neom9n.yaml
ros_ws/src/bringup_py/launch/: arm.launch.py  bs_main.launch.py  cameras.launch.py  drivetrain.launch.py  gps.launch.py  main.launch.py  maxwell_main.launch.py
ros_ws/src/compressed_video_converter/: CMakeLists.txt  README.md  (+1 more)
utilities/: flashlight.sh  get_network_ip.bash
utilities/serial_monitor/: geiger_serial_monitor.py  python_csv_writer.py  python_serial_monitor.py  sensor_data_15_38.csv  sensor_data_15_39.csv  sensor_data_17_13.csv  sensor_data_17_52.csv
utilities/web_server/: app.py
(+862 files in other folders)
