<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup_py</name>
  <version>0.0.0</version>
  <description>Launch files and scripts to bring rover online</description>
  <maintainer email="14607273+emcauliffe@users.noreply.github.com">Ethan McAuliffe</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>foxglove_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
